# ComfyUI-OpenAI-API

./: README.md  __init__.py  openai_chat_completion.py  pyproject.toml  requirements.txt
workflows/: flux_dev_example_openai_api.json
